# geonode-orcid-adapter

./: .gitignore  .pre-commit-config.yaml  README.md  license_header.txt  pyproject.toml
idandsso/: __init__.py  adapter.py  apps.py  keycloak.py  middleware.py  signals.py
idandsso/locale/de/LC_MESSAGES/: django.mo  django.po
idandsso/locale/en/LC_MESSAGES/: django.po
idandsso/templates/: base.html  nav.html
idandsso/templates/account/: logout.html
idandsso/templatetags/: idandsso.py
